Fix matchmaker ISE, CANCELED tournaments, rules signup, gifts whitespace issue

--- a/apps/nsw_srv/priv/static/css/styles.css
+++ b/apps/nsw_srv/priv/static/css/styles.css
@@ -5040,58 +5040,52 @@ footer .lang img {
 
 .rules-page-okey-label{
     color:#444;
-    left:43px;
+    left:53px;
 }
 
 .rules-page-okey-link{
     color:#FFF;
-    left:43px;
+    left:53px;
 }
 
 .rules-page-tavla-label{
     color:#444;
-    left:188px;
+    left:224px;
 }
 
 .rules-page-tavla-link{
     color:#FFF;
-    left:188px;
+    left:224px;
 }
 
 .rules-page-king-label{
     color:#444;
-    left:350px;
+    left:412px;
 }
 
 .rules-page-king-link{
     color:#FFF;
-    left:350px;
+    left:412px;
 }
 
 .rules-page-batak-label{
     color:#444;
-    left:527px;
+    left:615px;
 }
 
 .rules-page-batak-link{
     color:#FFF;
-    left:527px;
+    left:615px;
 }
 
 .rules-page-sorbi-label{
     color:#444;
-    left:698px;
+    left:812px;
 }
 
 .rules-page-sorbi-link{
     color:#FFF;
-    left:698px;
-}
-
-.rules-page-join-link{
-    color:#FFF;
-    top:20px; 
-    left:877px;
+    left:812px;
 }
 
 /* entry texts styles */
